2010-11-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-cite.el (gnus-article-natural-long-line-p): Removed.

2010-11-02  Julien Danjou  <julien@danjou.info>

	* nnir.el: Remove wais support.

2010-11-02  Glenn Morris  <rgm@gnu.org>

	* gnus-html.el: Reorder requirements to quieten compiler.

2010-11-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-cite.el (gnus-article-fill-cited-article): Make fill work
	properly for XEmacs as well.
	(gnus-article-fill-cited-article, gnus-article-foldable-buffer)
	(gnus-article-natural-long-line-p): Use window-width rather than
	frame-width.

2010-11-01  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (nnir-run-gmane): inhibit demon. return nil if no messages.
	(nnir-read-parms): don't modify query.
	(nnir-run-query): add ability to search topic on current line.
	(nnir-get-active): clean up.

2010-11-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-cite.el (gnus-article-foldable-buffer): Protect against
	degenerate articles.

	* gnus-sum.el (gnus-print-buffer): Rewrite to use with-temp-buffer.
	(gnus-print-buffer): Just print the buffer as is, without any copying
	to a buffer and then re-highlighting.

	* nnimap.el (nnimap-request-group): Store the new updated info.
	(nnimap-request-group): Select the group when we don't know whether it
	exists or not.

	* gnus-start.el (gnus-ask-server-for-new-groups): Return the new
	groups.

	* gnus-group.el (gnus-group-find-new-groups): Display all the new
	groups.

	* gnus-start.el (gnus-find-new-newsgroups): Return the list of new
	groups.

	* gnus-cite.el (gnus-article-fill-cited-article): Minimize the
	long-lines case by only filling the long lines.

	* nnimap.el (nnimap-parse-line): Don't bug out oddly formed replies
	(bug #7311).

2010-11-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shr.el: No need to declare `declare-function' since shr.el is for
	only Emacsen that provide `libxml-parse-html-region'.

	* dgnushack.el: Remove `(defvar iswitchb-temp-buflist)', that is