@@ -1,3 +1,8 @@
+2010-11-03  Andrew Cohen  <cohen@andy.bu.edu>
+
+	* nnir.el (nnir-request-move-article): call the underlying backend to
+	move articles from nnir.
+
 2010-11-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* gnus-cite.el (gnus-article-natural-long-line-p): Removed.
